<?xml version="1.0" encoding="UTF-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:icon="@drawable/trangchu"
            android:title="@string/trangchu" />
        <item
            android:checked="true"
            android:icon="@drawable/logodangnhap"
            android:title="@string/thucdon" />
        <item
            android:checked="true"
            android:icon="@drawable/nhanvien"
            android:title="@string/nhanvien" />
        <item
            android:checked="true"
            android:icon="@drawable/thongke"
            android:title="@string/thongke" />
        <item
            android:checked="true"
            android:icon="@drawable/caidat"
            android:title="@string/caidat" />
    </group>

</menu>