<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDangNhap">

    <LinearLayout
        android:id="@+id/lnKhungDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/size10dp">

        <EditText
            android:id="@+id/edTenDangNhapDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/tendangnhap"
            android:padding="@dimen/size10dp" />

        <EditText
            android:id="@+id/edMatKhauDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/colorWhite"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/nhapmatkhau"
            android:inputType="textPassword"
            android:padding="@dimen/size10dp" />

        <Button
            android:id="@+id/btnDongYDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/colorRed"
            android:padding="@dimen/size10dp"
            android:text="@string/dongy" />

        <Button
            android:id="@+id/btnDangKy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorOrganButton"
            android:padding="@dimen/size10dp"
            android:text="@string/dangky" />
    </LinearLayout>
</RelativeLayout>